--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,26 @@
 {
   "functions": {
-    "api/proxy/gemini.js": {
+    "api/proxy/gemini": {
       "handler": "api/proxy/gemini.js",
       "methods": ["POST"]
     },
-    "api/404.js": {
+    "api/404": {
       "handler": "api/404.js"
     }
   },
-  "regions": ["sin"],
   "rewrites": [
+    {
+      "source": "/api/proxy/gemini",
+      "destination": "/api/proxy/gemini.js"
+    },
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/404.js"
+    },
     {
       "source": "/(.*)",
       "destination": "/api/404.js"
     }
-  ]
+  ],
+  "regions": ["sin"]
 }
